<resources>
    <string name="app_name">e-commerce_app</string>

    <!-- Home Activity -->
    <string name="home_informative_text_for_search_text">Search Product</string>
    <string name="home_menu_image_button_content_description">menu</string>
    <string name="home_informative_title_text_view">Find your Product</string>
    <string name="home_apple_text">Apple</string>
    <string name="home_samsung_text">Samsung</string>
    <string name="home_huawei_text">Huawei</string>
    <string name="home_oppo_text">OPPO</string>
    <string name="home_product_categories_content_description">product categories</string>

    <!-- Navigation Header -->
    <string name="nav_header_icon_description">Navigation header</string>
    <string name="nav_header_title_text">E-Commerce</string>

    <!-- Navigation Menu -->
    <string name="nav_menu_favorite">Favorite</string>

    <!-- Favorite Products -->
    <string name="favorite_products_title_text">Favorite Products</string>
    <string name="favorite_products_no_products_added_text">No favorite products added</string>


    <!-- Item Product -->
    <string name="item_product_dollar_sign_real">$%1$s</string>

    <!-- Erro Messages -->
    <string name="no_internet_connection_error_text">No internet connection, try again!</string>
    <string name="generic_error_text">An error occurred, please try again later!</string>

    <!-- Alert Dialog Messages -->
    <string name="dialog_title_text">Error!</string>
    <string name="dialog_positive_button_message_text">Try Again</string>
    <string name="dialog_negative_button_message_text">Cancel</string>

    <!-- Details Activity -->
    <string name="details_back_image_button_content_description">back</string>
    <string name="details_favorite_button_image_button_content_description">favorite button</string>
    <string name="details_add_to_cart_button">Add to cart</string>
    <string name="details_favorite_not_implemented_message">favorite button not implemented yet</string>
    <string name="details_add_button_not_implemented_message">add button not implemented yet</string>
    <string name="details_name_text">Details</string>
</resources>